--- a/src/scss/_Base.scss
+++ b/src/scss/_Base.scss
@@ -1,7 +1,7 @@
 html {
   height: 100%;
   font-size: 13px;
-  font-family: 'proxima_nova_regular', Helvetica, sans-serif;
+  font-family: $regular;
   letter-spacing: 0.4px;
   color: $ui-primary;
 }
@@ -42,7 +42,7 @@ input {
   letter-spacing: 0.4px;
   background: none;
   border: none;
-  font-family: 'proxima_nova_regular', Helvetica, sans-serif;
+  font-family: $regular;
 }
 
 a {
