--- a/src/scss/_SearchButton.scss
+++ b/src/scss/_SearchButton.scss
@@ -5,7 +5,7 @@
   align-items: center;
   color: white;
   // color: rgba(255, 255, 255, 0.6);
-  font-family: $roman;
+  font-family: $regular;
   font-size: 1rem;
   cursor: pointer;
   // padding-left: 20px;
