--- a/src/scss/_Tip.scss
+++ b/src/scss/_Tip.scss
@@ -32,7 +32,7 @@
   .user-date {
     float: right;
     color: $black-05;
-    font-family: $roman;
+    font-family: $regular;
     font-size: 0.9rem;
   }
 }
